# FullStack-AI-24

./: .gitignore  README.md
code/data-managment/: pyproject.toml
code/data-managment/training_checkpoints/: ckpt-1.index  ckpt-2.index  ckpt-3.index
code/iris-project/: iri-project.code-workspace
code/iris-project/backend/: api.py  iris_model_methods.py  main.py
code/iris-project/frontend/: home.py  pyproject.toml
code/iris-project/ml-model/: train.ipynb
code/mlflow-intro/: flowers-model.py  iris-model.py  model-registry.py  model_client.py  pyproject.toml  serve_flowers_model.sh  serve_iris_model.sh  serve_mlflow.sh
code/mlflow-setup/: Dockerfile  check_credentials.py  entrypoint.sh  get_secret.py  main.py  pyproject.toml  setup.sh  test-postgress-conn.py
code/project-template/: deploy.sh  docker-compose.yaml  makefile  project-template.code-workspace
code/project-template/backend/: Dockerfile  api.py  decorators.py  flowers_model_api.py  iris_model_api.py  model.py  models.py  pyproject.toml  run.sh  shell.sh  users_api.py  users_methods.py
code/project-template/data/db/: postmaster.pid
code/project-template/data/db/base/1/: 1259  2619  2619_vm  2696  2841  pg_internal.init
code/project-template/data/db/base/16384/: 1247  1247_vm  1249  1249_fsm  1249_vm  1259  1259_vm  2579  2606  2606_vm  2608  2608_fsm  2608_vm  2610  2610_vm  2619  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  pg_internal.init
code/project-template/data/db/base/5/: pg_internal.init
code/project-template/data/db/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
code/project-template/frontend/: Dockerfile  home.py  pyproject.toml  run.sh
code/project-template/frontend/pages/: about.py
code/project-template/ml-model/: flowers-model.ipynb  iris-train.ipynb  pyproject.toml
